--- a/index.html
+++ b/index.html
@@ -101,6 +101,74 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content align-items-center justify-content-center">
+            <div class="col-12 col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a table</h3>
+                    <div class="card-body">
+                        <div>
+                            <div class="form-group row">
+                                <label for="Guests" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-12 col-md-10">
+                                    <label class="radio-inline"><input type="radio" name="optradio" >1</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 2</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 3</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 4</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 5</label>
+                                    <label class="radio-inline"><input type="radio" name="optradio"> 6</label>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <label for="Guests" class="col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-12 col-md-4">
+                                    <input type="text" class="form-control" onfocus="(this.type='date')" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12 col-md-4">
+                                    <input type="text" class="form-control" onfocus="(this.type='time')" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+
+
+                        </form>
+                    </div>
+                </div>
+         </div>
+            <!-- <div class="col-12 col-md-8 ">
+                <div class="card">
+                    <h3 class="card-header bg-primary text-white">Reserve a table</h3>
+                    <div class="card-body">
+                        <div class="col-12 col-md-10">
+                            <form>
+                                <div class="form-group row">
+                                    <label for="Guests" class="col-md-2 col-form-label">Number of Guests</label>
+                                    <div class="col-md-10">
+                                        <label class="radio-inline"><input type="radio" name="optradio" >1</label>
+                                        <label class="radio-inline"><input type="radio" name="optradio"> 2</label>
+                                        <label class="radio-inline"><input type="radio" name="optradio"> 3</label>
+                                        <label class="radio-inline"><input type="radio" name="optradio"> 4</label>
+                                        <label class="radio-inline"><input type="radio" name="optradio"> 5</label>
+                                        <label class="radio-inline"><input type="radio" name="optradio"> 6</label>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div> -->
+         </div>
+
+        </div>
+
+
+
+
     </div>
 
     <footer class="footer">
